# backend_practice

./: README.md  db.sqlite3  pyproject.toml
common/: models.py
config/: authentication.py  settings.py  urls.py
tweets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py  0003_rename_create_at_like_created_at_and_more.py
tweets/templates/: see_tweets.html
users/: admin.py  models.py  serializers.py  tserializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_avatar.py
